<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">毕设</string>
    <string name="hello_world">Hello world!</string>
    <string name="layout_main_riqi">2014年2月</string>
    <string name="layout_main_zcye">支出:\n余额:</string>
    <string name="add_zc_bt">支出</string>
    <string name="add_sr_bt">收入</string>
    <string name="add_jine">金额:</string>
    <string name="add_jine_text">0.00</string>
    <string name="add_leibie">选择类别</string>
    <string name="add_leibie_text">餐饮</string>
    <string name="add_time">时间：</string>
    <string name="add_time_text">2016.3.15</string>
    <string name="add_beizhu">备注：</string>
    <string name="add_beizhu_text">无备注</string>
    <string name="add_ok">确认</string>
    <string name="add_cancel">取消</string>
    <string name="add_delete">删除</string>
    <string name="listview_leibie">类别</string>
    <string name="listview_jine_text">0.00</string>
    <string name="listview_beizhu_text">备注</string>
    <string name="listview_time_text">2016-03-23</string>
    <string name="zhichujine_text">123</string>
    <string name="shourujine_text">456</string>
    <string name="yuejine_text">456</string>




</resources>
