<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left" >

            <TextView
                android:id="@+id/listview_leibie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/listview_leibie"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <TextView
                android:id="@+id/listview_jine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/listview_jine_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:gravity="left" >

            <TextView
                android:id="@+id/listview_beizhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="@string/listview_beizhu_text"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/listview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listview_time_text"
                android:textColor="#000000" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>