<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/add_zcsr_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- 日期布局 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/jz_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_main_riqi"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_money_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/jz_bgup"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <!-- 支出金额布局 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/jz_zhichujine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:text="@string/zhichujine_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/jz_zhichu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:text="支出"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!-- 收入余额布局 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center" >

                <TextView
                    android:id="@+id/jz_sr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="收入:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/jz_shourujine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/shourujine_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/jz_ye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="余额:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/jz_yuejine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/yuejine_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 菜单布局 -->

    <LinearLayout
        android:id="@+id/main_bottom_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/jz_bgdown"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_mingxi"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="账单明细"
            android:layout_gravity="center"
            android:focusable="false" >
        </Button>

        <Button
            android:id="@+id/button_add"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="添加账单"
            android:focusable="false"/>
    </LinearLayout>

</LinearLayout>
